# imm-cee-tee-ess

./: .gitignore  Cargo.toml  Makefile  \  err.py
scripts/: commit-msg  go_nodes.py
src/: arena.rs  attack_boards.rs  bench.rs  board.rs  chess_move.rs  edge.rs  fen.rs  game_time.rs  hashtable.rs  historized_board.rs  lib.rs  magics.rs  main.rs  movegen.rs  node.rs  node_buffer.rs  perft.rs  policy.rs  search.rs  search_type.rs  see.rs  subtree_bias.rs  uci.rs  value.rs  zobrist.rs
src/board/: fen.rs
src/eval/: accumulator.rs  mod.rs  network.rs  simd.rs  util.rs
src/types/: bitboard.rs  pieces.rs  square.rs
trainer/: Cargo.toml
trainer/src/: advanced.rs  main.rs  threat_inputs.rs  trainer.rs
