[package]
name = "imm-cee-tee-ess"
version = "0.1.0"
edition = "2021"
authors = ["Jeff Powell"]

[dependencies]
arrayvec = "0.7.4"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
strip = true
panic = "abort"

[profile.dev]
overflow-checks = false

[workspace]
members = ["trainer"]
resolver = "2"
